Bug 314886 - JJ: Error message when finishing a search is unreadable has its color is pink on grey
Summary: JJ: Error message when finishing a search is unreadable has its color is pink...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: search (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-02-11 10:29 UTC by Alexandre Bonneau
Modified: 2013-02-17 21:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments
Unreadable error message on the bottom right (189.58 KB, image/png)
2013-02-11 10:29 UTC, Alexandre Bonneau
Details
fixed bug #314886 (365 bytes, patch)
2013-02-17 18:01 UTC, Shubham Chaudhary
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Bonneau 2013-02-11 10:29:01 UTC
Error message is not unreadable on kde v4.10

Reproducible: Always

Steps to Reproduce:
1. Open a text file with many occurrences of a string "abc" (for instance)
2. Search for "abc" using ctrl+f
3. Use enter to switch to the next "abc" occurrence, until you get back to the beginning of the file
4. An error message written in light pink is shown on the bottom right "Bottom has been reached, continue from the top" (translated from French)
Actual Results:  
It's unreadable !
Comment 1 Alexandre Bonneau 2013-02-11 10:29:42 UTC
Created attachment 77124 [details]
Unreadable error message on the bottom right
Comment 2 Alexandre Bonneau 2013-02-11 10:34:08 UTC
Too bad you can't edit your comments :
I meant of course in comment #1 :
"Error message is unreadable on Kde v4.10"
Comment 3 Shubham Chaudhary 2013-02-17 18:01:17 UTC
Created attachment 77384 [details]
fixed bug #314886

Please review this patch and  let me know if any change is required.
Comment 4 Dominik Haumann 2013-02-17 21:12:35 UTC
Git commit 0b3dc98d77ab413fd5fd993901b323c218783873 by Dominik Haumann.
Committed on 17/02/2013 at 22:12.
Pushed by dhaumann into branch 'master'.

fix unreadable pink error message in search

Thanks to Shubham Chaudhary for the patch.
FIXED-IN: 4.10.1

M  +2    -2    part/search/katesearchbar.cpp

http://commits.kde.org/kate/0b3dc98d77ab413fd5fd993901b323c218783873
Comment 5 Dominik Haumann 2013-02-17 21:15:06 UTC
Git commit 9cec1e438494ae62bc8ed5e54316bbf823b74095 by Dominik Haumann.
Committed on 17/02/2013 at 22:12.
Pushed by dhaumann into branch 'KDE/4.10'.

fix unreadable pink error message in search

Thanks to Shubham Chaudhary for the patch.
FIXED-IN: 4.10.1

M  +2    -2    part/search/katesearchbar.cpp

http://commits.kde.org/kate/9cec1e438494ae62bc8ed5e54316bbf823b74095