fix unreadable pink error message in search

Thanks to Shubham Chaudhary for the patch.

BUG: 314886
FIXED-IN: 4.10.1